Bug 1955047 - Port bug 1951832: Work around white space normalization changes. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D242191

--HG--
extra : amend_source : 5fc2cb7c49a4812b5b50dfd760f9c9138d919430

--- a/mail/themes/shared/mail/editorContent.css
+++ b/mail/themes/shared/mail/editorContent.css
@@ -9,6 +9,12 @@
  *  place in EditorOverride.css, instead of here.
 */
 
+body {
+  /* Work around changes to how whitespace is handled introduced by bug 1951832
+   * to match behavior of other browsers. */
+  white-space: pre-wrap;
+}
+
 a[name] {
   margin-top: 2px;
   margin-inline-start: 2px;
